--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <h2>mini mini</h2>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, placeat?</p>
 <p>i am coading and coading</p>
+<img src="osman.jpg" alt="">
 </body>
 </html>
