--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, placeat?</p>
 <p>i am coading and coading</p>
 <img src="osman.jpg" alt="">
+<img src="hasan bey.jpg" alt="">
 </body>
 </html>
