--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <p>i am coading and coading</p>
 <img src="osman.jpg" alt="">
 <img src="hasan bey.jpg" alt="">
+<img src="osman.jpg" alt="">
 </body>
 </html>
